# linspec-dashboard

./: LICENSE  README.md  app.py  pyproject.toml  start.sh
.github/workflows/: ci.yml
templates/: base.html  dashboard.html  scan_detail.html
tests/: test_api.py
