[project]
name = "linspec-dashboard"
description = "Web dashboard for LinSpec kernel hardening scan reports"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "gunicorn>=21.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
